2009-09-17  Jaroslav Hajek  <highegg@gmail.com>

	* pytave.cc: Move #include of arrayobjectdefs after pytavedefs to
	ensure config.h is included.

2009-09-16  Jaroslav Hajek  <highegg@gmail.com>

	* package/pytave.py (load_package, unload_package): New funcs.
	* octave_to_python.cc: Workaround for return values bug in 
	Octave <= 3.2.3.

2009-09-15  Jaroslav Hajek  <highegg@gmail.com>

	* octave_to_python.cc: Move #include of arrayobjectdefs after
	pytavedefs to ensure config.h is included.
	* python_to_octave.cc: Ditto.
	* setup.py.in: Undo leaked local paths.

2009-07-03  David Grundberg  <individ@acc.umu.se>

	* pytave.cc: Sorted includes.
	(atexit): New function. Call do_octave_atexit before Python
	unloads shared libraries.
	* package/pytave.py (_atexit): New function.

2009-07-01  David Grundberg  <individ@acc.umu.se>

	* pytave.cc [HAVE_USELOCALE] (init, func_eval, str_eval): Run
	Octave interpreter in C locale.
	* configure.ac: Define HAVE_USELOCALE. Substitute @PYTHON@. Added
	checks for integer typedefs.  Make setup.py executable.  Friendly
	message on configuration completion.
	* setup.py.in: Let setup.py be interpreted by the same version of
	Python we configured for.

2009-06-19  Jaroslav Hajek  <highegg@gmail.com>

	* configure.ac: Support --enable-numpy
	* setup.py.in: Dynamically determine NumPy include path.
	* pytave.cc (get_module_name): New function.
	* octave_to_python.cc (octvalue_to_pyarrobj): 
	Support bool arrays with NumPy.
	* python_to_octave.cc (pyarr_to_octvalue, 
	copy_pyarrobj_to_octarray_boot): Likewise.
	* package/pytave.py: Dynamically import Numeric,
	forward to numpy.oldnumeric if run with NumPy.
	* test/test.py: Update some tests.

2009-06-17  Jaroslav Hajek  <highegg@gmail.com>

	* package/pytave.py (stripdict): New function.
	(narrowlist): New function.
	(simplify): New function.

2009-06-16  Jaroslav Hajek  <highegg@gmail.com>

	* octave_to_python.cc 
	(createPyArr): Don't simplify row vectors to 1D arrays.