@@ -1,3 +1,7 @@
+2009-09-18  Jaroslav Hajek  <highegg@gmail.com>
+
+	* package/pytave.py (simplify): Improve NumPy compatibility.
+
 2009-09-17  Jaroslav Hajek  <highegg@gmail.com>
 
 	* pytave.cc: Move #include of arrayobjectdefs after pytavedefs to
